# spray-akka

./: README.md  slides.md
ios/Streamer/: ViewController.m  ViewController.mm
ios/Streamer.xcodeproj/: project.pbxproj
ios/Streamer/CV/: BlockingQueueInputStream.h  BlockingQueueInputStream.m  CVServer.h  CVServer.mm  ImageEncoder.h  ImageEncoder.m
ios/Streamer/Streamer/: ViewController.h  ViewController.mm
ios/Streamer/Streamer.xcodeproj/: project.pbxproj
ios/Streamer/Streamer/CV/: CVServer.h  CVServer.m
ios/Streamer/Streamer/CV/H264/: VideoEncoder.m
ios/Streamer/Streamer/en.lproj/: ViewController.xib
jvm/: build.sbt
jvm/project/: plugins.sbt
jvm/src/main/resources/: application.conf  logback.xml
jvm/src/main/scala/org/eigengo/sd/: rest.scala  shell.scala
jvm/src/main/scala/org/eigengo/sd/api/: api.scala  recog.scala
jvm/src/main/scala/org/eigengo/sd/core/: coordinator.scala  core.scala  encoding.scala  imageio.scala  jabber.scala  recog.scala
native/: im.cpp  rabbit.cpp  rabbit.h
native/recog/: CMakeLists.txt
native/recog/src/: CMakeLists.txt  coins.cpp  coins.h  count.cpp  count.h  faces.cpp  faces.h  main.cpp  main.h  recog.cpp  recog.h
native/recog/test/: CMakeLists.txt  coins.cpp  count.cpp  faces.cpp  recog.cpp
